manifests/cyprien_iov/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: friend-cyprien-iov
  labels:
    traefik: enabled
