manifests/cyprien_iov/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyprien-iov-ttyd
  namespace: friend-cyprien-iov
  labels:
    app: ttyd
    friend: cyprien-iov
spec:
  type: ClusterIP
  selector:
    app: ttyd
    friend: cyprien-iov
  ports:
    - name: ttyd
      port: 7681
      targetPort: 7681
