manifests/cyprien_iov/07-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cyprien-iov-vanity
  namespace: friend-cyprien-iov
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`cyprien_iov.hermes.caron.fun`)
      kind: Rule
      middlewares:
        - name: friend-basic
          namespace: friend-cyprien-iov
      services:
        - name: cyprien-iov-ttyd
          port: 7681
  tls:
    certResolver: cfresolver
